examples/test/testpolicy12914.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12914
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key20: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value19
          key13: value42
      podSelector:
        matchLabels:
          key16: value4
          key11: value25
